# WorkflowAutomation

./: LISENCE  README.md  setup.cfg
src/workflow_automation/: cmake_man.py
src/workflow_automation/test/: CMakeLists.txt
src/workflow_automation/test/src/: main.c  main.cpp
src/workflow_automation_pkg_joshortner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
