[metadata]
name = workflow-automation-pkg-joshortner
version = 1.0.0
author = Josh Ortner
author_email = jlortner@gmail.com
description = Automation for some personal workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshortner/WorkflowAutomation
project_urls =
    Bug Tracker = https://github.com/joshortner/WorkflowAutomation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cmake-man = workflow_automation.cmake_man:main
